Refactor organization ownership checks and improve Redis cache configuration
- Update Redis cache configuration to use time-to-live from properties.
- Refactor OrganizationOwnershipService to verify ownership and return the Organization object.
- Update VenueService and OrganizationService to utilize the new ownership verification method.
- Modify tests to reflect changes in ownership verification logic.
- Add SQL script to seed initial categories for the platform.